# stegascope

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Stegascope.drawio  package-lock.json  package.json  vite.config.ts
.codex/: automation.yaml
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
docs/: architecture.md  maintenance.md  onboarding.md  phase-readiness.md  testing.md  troubleshooting.md
docs/instructions/: phase-gates.json
docs/management/: POLICY.json
scripts/: validate-download-ipc.mjs  validate-phase-evidence.mjs  validate-toolchain-readiness.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/domain/: analyzer.rs  analyzer_pipeline.rs  extracted_file.rs  file_loader.rs  media_file.rs  mod.rs  task.rs
src/api/: analysis.ts
stegascope/src/: App.css  App.tsx
stegascope/src-tauri/: Cargo.toml
stegascope/src-tauri/src/: lib.rs  main.rs
stegascope/src/api/: analysis.ts
